--- a/ProyectoWeb_Martes/ProyectoWeb_Martes/ProyectoWeb_Martes.csproj
+++ b/ProyectoWeb_Martes/ProyectoWeb_Martes/ProyectoWeb_Martes.csproj
@@ -121,11 +121,10 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\InicioController.cs" />
-    <Compile Include="Controllers\UsuarioController.cs" />
+    <Compile Include="Entidades\Usuario.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\UsuarioModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -153,6 +152,9 @@
     <Content Include="Estilos\img\undraw_profile_2.svg" />
     <Content Include="Estilos\img\undraw_profile_3.svg" />
     <Content Include="Estilos\img\undraw_rocket.svg" />
+    <Content Include="Estilos\js\RegistroUsuarios.js" />
+    <Content Include="Estilos\js\sb-admin-2.js" />
+    <Content Include="Estilos\js\sb-admin-2.min.js" />
     <Content Include="Estilos\vendor\bootstrap\js\bootstrap.bundle.js" />
     <Content Include="Estilos\vendor\bootstrap\js\bootstrap.bundle.min.js" />
     <Content Include="Estilos\vendor\bootstrap\js\bootstrap.js" />
@@ -295,10 +297,11 @@
     <Content Include="Views\Inicio\RegistrarUsuario.cshtml" />
     <Content Include="Views\Shared\_LayoutExterno.cshtml" />
     <Content Include="Views\Inicio\PantallaPrincipal.cshtml" />
+    <Content Include="Views\Inicio\RecuperarAcceso.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Estilos\js\" />
+    <Folder Include="Models\" />
     <Folder Include="Views\Usuario\" />
   </ItemGroup>
   <ItemGroup>
