--- a/ProyectoApi_Martes/ProyectoApi_Martes/Web.config
+++ b/ProyectoApi_Martes/ProyectoApi_Martes/Web.config
@@ -13,9 +13,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-	<add key="cuentaCorreo" value="acanul70494@ufide.ac.cr" />
-	<add key="claveCorreo" value="An3Dr3Es22" />
-	  
+    <add key="cuentaCorreo" value="acanul70494@ufide.ac.cr" />
+    <add key="claveCorreo" value="An3Dr3Es22" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
@@ -72,7 +71,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-	  <add name="martes_dbEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-U72EGR1;initial catalog=martes_db;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="martes_dbEntities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=martes_db;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
